# cng-openssl-provider

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug.c  debug.h
.github/workflows/: ci.yml
client/: CMakeLists.txt  client.c
cng_provider/: CMakeLists.txt  cng_provider.c  cng_provider.h
cng_provider/keymgmt/: cng_keymgmt_functions.c  cng_keymgmt_functions.h
cng_provider/signature/: cng_signature_functions.c  cng_signature_functions.h
cng_provider/store/: cng_store_functions.c  cng_store_functions.h
